Add all resources.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ node_modules
 # Debug log from npm
 npm-debug.log
 
+#### joe made this: http://goel.io/joe
+
+#####=== Sass ===#####
+
+.sass-cache
+*.css.map
+
