--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "~2.3.4",
     "googleapis": "~2.1.5",
     "parse": "~1.6.3",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "request": "~2.63.0"
   }
 }
