--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "~2.1.5",
     "parse": "~1.6.3",
     "underscore": "~1.8.3",
-    "request": "~2.63.0"
+    "request": "~2.63.0",
+    "moment": "~2.10.6"
   }
 }
